welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:56: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:59: error: expected start of definition
	override def forward()  {
                 ^Diagonal:62: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:65: error: expected start of definition
	override def backward() {
                 ^Diagonal:68: error: Unmatched closing brace '}' ignored here
}
^